# ghr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: adopt.rs  clean.rs  cli.rs  config.rs  error.rs  install.rs  lock.rs  main.rs  manifest.rs  output.rs  picker.rs  state.rs  sync.rs  timer.rs  uninstall.rs  update.rs
src/github/: api.rs  mod.rs  types.rs
src/installer/: binary.rs  checksum.rs  download.rs  extract.rs  mod.rs
src/matcher/: filter.rs  mod.rs  pattern.rs  score.rs
