[package]
name = "binto"
version = "0.2.0"
edition = "2024"
description = "User-land binary package manager for GitHub releases"
license = "MIT"
repository = "https://github.com/Ardnys/binto"
keywords = ["github", "releases", "package-manager", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "binto"
path = "src/main.rs"

[dependencies]
clap         = { version = "4", features = ["derive"] }
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
toml_edit    = "0.22"
sha2         = "0.10"
hex          = "0.4"
tar          = "0.4"
flate2       = "1"
liblzma      = "0.3"
bzip2        = "0.4"
zip          = { version = "2", default-features = false, features = ["deflate", "bzip2", "time"] }
dialoguer    = { version = "0.11", features = ["fuzzy-select"] }
futures-util = "0.3"
indicatif    = "0.18"
console      = "0.15"
dirs         = "5"
anyhow       = "1"
thiserror    = "2"
chrono       = { version = "0.4", features = ["serde"] }
glob         = "0.3"
walkdir      = "2"
indexmap     = { version = "2", features = ["serde"] }
ctrlc        = "3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
tracing-indicatif  = "0.3"

[dev-dependencies]
tempfile     = "3"
